@@ -1,3 +1,7 @@
+2008-11-12 Ingo Renner  <ingo@typo3.org>
+
+	* fixed naming of the widget widget
+
 2008-11-12 Frank Naegler  <typo3@naegler.net>
 
 	* added hook connector to the profile model
